# scrapy_delta_crawling

./: README.rst  pyproject.toml  requirements.txt  setup.py  tox.ini
.github/: ISSUE_TEMPLATE.md
docs/: Makefile  conf.py  index.rst  installation.rst  make.bat  usage.rst
src/scrapy_delta_crawling/: __init__.py  diff_functions.py  scrapy_delta_crawling.py
tests/: __init__.py  test_scrapy_delta_crawling.py
