[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "scrapy_delta_crawling"
version = "0.1.0"
description = "Tools to apply delta crawling between Scrapy jobs."
readme = "README.rst"
authors = [
  {name = "Guillermo Bondonno", email = "guillermo.bondonno@zyte.com"}
]
maintainers = [
  {name = "Guillermo Bondonno", email = "guillermo.bondonno@zyte.com"}
]
classifiers = [

]
license = {text = "Not open source"}
dependencies = [
  "scrapy",
  "scrapinghub"
]

[project.optional-dependencies]
dev = [
    "coverage",  # testing
    "mypy",  # linting
    "pytest",  # testing
    "ruff"  # linting
]

[project.urls]

bugs = "https://github.com/guillermo-bondonno/scrapy_delta_crawling/issues"
changelog = "https://github.com/guillermo-bondonno/scrapy_delta_crawling/blob/master/changelog.md"
homepage = "https://github.com/guillermo-bondonno/scrapy_delta_crawling"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.package-data]
"*" = ["*.*"]




# Mypy
# ----

[tool.mypy]
files = "."

# Use strict defaults
strict = true
warn_unreachable = true
warn_no_return = true

[[tool.mypy.overrides]]
# Don't require test functions to include types
module = "tests.*"
allow_untyped_defs = true
disable_error_code = "attr-defined"

